# ai-layer

./: .gitignore  Cargo.toml
ai-agent/: Cargo.toml
ai-agent/behaviours/auto-tag-by-project/: SKILL.md
ai-agent/behaviours/meeting-prep/: SKILL.md
ai-agent/behaviours/tidy-downloads/: SKILL.md
ai-agent/src/: agentic.rs  behaviour.rs  compaction.rs  config.rs  engine.rs  executor.rs  gate.rs  graph.rs  handlers.rs  lib.rs  loader.rs  main.rs  registry.rs  router.rs  seams.rs  slice.rs  source.rs  world.rs
ai-agent/tests/: load_behaviours.rs  load_fixtures_via_loader.rs  route_fixtures.rs
ai-classifier/: Cargo.toml
ai-classifier/src/: lib.rs  onnx.rs
ai-core/: Cargo.toml
ai-core/src/: audit.rs  capability.rs  cypher.rs  graph_query.rs  graph_schema.rs  lib.rs  mcp.rs  pipeline.rs  provider.rs  routing.rs  tagging.rs
ai-daemon/: Cargo.toml
ai-daemon/src/: authz.rs  config_watch.rs  graph_adapter.rs  lib.rs  main.rs  mcp_discovery.rs  peer.rs  registry.rs  service.rs
ai-explanation/: Cargo.toml
ai-explanation/src/: lib.rs
ai-providers/: Cargo.toml
ai-providers/src/: lib.rs  ollama.rs  proxied.rs
ai-proxy/: Cargo.toml
ai-proxy/src/: allowlist.rs  audit.rs  catalog.rs  forward.rs  lib.rs  main.rs  peer_auth.rs  service.rs
ai-sandbox/: Cargo.toml
ai-sandbox/src/: lib.rs  sandbox.rs
ai-sandbox/tests/: sandbox_integration.rs
