[package]
name = "lunaris-ai-agent"
version = "0.1.0"
edition = "2021"
description = "Autonomous agent daemon for the Lunaris AI layer. Exposes org.lunaris.AIAgent1 on the session D-Bus. Each autonomous behaviour is an opt-in Settings toggle (Foundation §5.5); the daemon only runs when at least one behaviour is enabled."

[[bin]]
name = "lunaris-ai-agent"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
# Default build screens with no native dependency: the injection-classifier
# seam exists and is exercised by tests with a stub, but the daemon wires no
# real classifier, so external content is sanitised (S18-B text stripper, in
# process) and flows under the gate's mandatory-confirmation containment. The
# `onnx` feature pulls in the ONNX-backed classifier (S17) and lets the daemon
# screen external content against the provisioned Prompt-Guard model before it
# reaches the LLM. Off by default so the workspace and CI build without the
# ONNX Runtime present (matches lunaris-ai-classifier's own gating).
default = []
onnx = ["lunaris-ai-classifier/onnx"]

[dependencies]
lunaris-ai-core = { path = "../ai-core" }
lunaris-ai-providers = { path = "../ai-providers" }
lunaris-ai-classifier = { path = "../ai-classifier" }
lunaris-ai-sandbox = { path = "../ai-sandbox" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
os-sdk = { path = "../../sdk/os-sdk" }
prost = "0.13"
async-trait = "0.1"
futures = "0.3"
sha2 = "0.10"
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dev-dependencies]
audit-proto = { path = "../../audit-proto", features = ["test-util"] }
tokio = { version = "1", features = ["test-util"] }
