[package]
name = "lunaris-ai-core"
version = "0.1.0"
edition = "2021"
description = "Shared library for the Lunaris AI layer. Defines the AIProvider trait, routing engine, MCP client wrapper, audit log producer, capability gate, content-origin tagging, and the two-step Cypher pipeline."

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
