[package]
name = "lunaris-ai-daemon"
version = "0.1.0"
edition = "2021"
description = "Query daemon for the Lunaris AI layer. Exposes org.lunaris.AI1 on the session D-Bus. Coordinates the Cypher pipeline plus LLM dispatch and issues per-session authorization tokens to MCP callers."

[[bin]]
name = "lunaris-ai-daemon"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
lunaris-ai-core = { path = "../ai-core" }
lunaris-ai-providers = { path = "../ai-providers" }
os-sdk = { path = "../../sdk/os-sdk" }
# MCP discovery resolves the peer of each module socket to verify it
# is served by modulesd; identity resolution lives here.
lunaris-permissions = { path = "../../sdk/permissions" }
async-trait = "0.1"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "net", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
