[package]
name = "lunaris-ai-providers"
version = "0.1.0"
edition = "2021"
description = "Provider adapters for the Lunaris AI layer (Ollama, llama.cpp, Anthropic, OpenAI). Each adapter implements the AIProvider trait defined in lunaris-ai-core."

[lib]
path = "src/lib.rs"

[dependencies]
lunaris-ai-core = { path = "../ai-core" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "time"] }
tracing = "0.1"
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
wiremock = "0.6"
