[package]
name = "lunaris-ai-proxy"
version = "0.1.0"
edition = "2021"
description = "Outbound network proxy daemon for the Lunaris AI layer. The only component permitted to make connections to AI provider endpoints (Foundation §8.4.6). Enforces an endpoint allowlist and emits per-call audit log entries."

[[bin]]
name = "lunaris-ai-proxy"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
wiremock = "0.6"
